syntax = "proto3";

package grpcSkill;

service grpcSkill {
    rpc RegisterSkill(RegisterRequest) returns(RegisterResponse) {}
}

message SkillInfo {
    string ExampleText = 1;
    string GroupID = 2;
}

message RegisterRequest {
    string SkillName = 1;
    string SkillID = 2;
    repeated SkillInfo Examples = 3; 
    string ForwardAddress = 4;
    int32 ForwardType = 5;
}

message RegisterResponse {
    bool IsRegistered = 1;
}